# ot-harjoitustyo

./: .gitignore  README.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli  viikko3.md
projekti/: .coveragerc  pyproject.toml  tasks.py
projekti/dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tyoaikakirjanito.md  vaatimusmaarittely.md
projekti/src/: config.py  database_connection.py  house.py  index.py  initialize_database.py  menu.py  transaction.py
projekti/src/repository/: house_repository.py  transaction_repository.py
projekti/src/services/: house_services.py  transaction_services.py
projekti/src/tests/: house_test.py  transaction_test.py
projekti/src/ui/: ui.py
projekti/src/ui/graphic/: edit_house_view.py  graphic_ui.py  main_view.py  navbar.py  new_house_view.py  transaction_view.py  ui.py
