[tool.poetry]
name = "vuokraSeuranta"
version = "0.1.0"
description = ""
authors = ["Shmuli02 <samuli.kaleva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^4.0"
invoke = "^1.6.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"
coverage = "^6.1.1"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
